--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="lib/log4j-core-2.4.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/catalina.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
